feat: implement match score calculation and improve recommendations API