@@ -4,8 +4,8 @@ import com.hireflow.hireflow.domain.jobposting.JobPosting;
 import com.hireflow.hireflow.domain.jobposting.dto.JobPostingRequestDto;
 import com.hireflow.hireflow.domain.jobposting.dto.JobPostingResponseDto;
 import com.hireflow.hireflow.domain.jobposting.repository.JobPostingRepository;
-import com.hireflow.hireflow.domain.user.User;
-import com.hireflow.hireflow.domain.user.repository.UserRepository;
+import com.hireflow.hireflow.domain.match.Match;
+import com.hireflow.hireflow.domain.match.MatchRepository;
 import com.hireflow.hireflow.global.exception.NotFoundException;
 import com.hireflow.hireflow.infra.crawler.JobSource;
 import lombok.RequiredArgsConstructor;
@@ -14,7 +14,7 @@ import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -24,7 +24,7 @@ import java.util.stream.Collectors;
 public class JobPostingService {
 
     private final JobPostingRepository jobPostingRepository;
-    private final UserRepository userRepository;
+    private final MatchRepository matchRepository;
 
     // 공고 목록 캐싱, keyword, tech 조합마다 다른 캐시 키 생성
     @Cacheable(value = "jobPostings", key = "'list_' + (#keyword ?: 'ALL') + '_' + (#tech ?: 'ALL')")
@@ -45,36 +45,16 @@ public class JobPostingService {
     // 추천 캐싱 + 기술스택 매칭 로직
     @Cacheable(value = "recommendations", key = "'rec_' + #userId")
     public List<JobPostingResponseDto> getRecommendations(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("유저를 찾을 수 없습니다."));
+        List<Match> matches = matchRepository.findByUserIdOrderByScoreDesc(userId);
 
-        String userTechStack = user.getTechStack(); // 예: "Java,Spring,React"
-
-        if (userTechStack == null || userTechStack.isBlank()) {
-            // 기술스택 없으면 최신 3개
-            return jobPostingRepository.findAll()
-                    .stream().limit(3)
-                    .map(JobPostingResponseDto::new)
-                    .collect(Collectors.toList());
+        if (matches.isEmpty()) {
+            return Collections.emptyList();
         }
 
-        List<String> userTechs = Arrays.asList(userTechStack.split(","));
-
-        return jobPostingRepository.findAll()
-                .stream()
-                .filter(jp -> jp.getTechStackTags() != null && !jp.getTechStackTags().isBlank())
-                .sorted((a, b) -> {
-                    long scoreA = userTechs.stream()
-                            .filter(t -> a.getTechStackTags().contains(t.trim()))
-                            .count();
-                    long scoreB = userTechs.stream()
-                            .filter(t -> b.getTechStackTags().contains(t.trim()))
-                            .count();
-                    return Long.compare(scoreB, scoreA); // 내림차순
-                })
+        return matches.stream()
                 .limit(3)
-                .map(JobPostingResponseDto::new)
-                .collect(Collectors.toList());
+                .map(m -> new JobPostingResponseDto(m.getJobPosting(), m.getScore(), m.getRecommendationReason()))
+                .toList();
     }
 
     // 공고 등록 시 캐시 무효화
